# digitalStore

./: .gitignore  docker-compose.yml  pyproject.toml
apps/Auth/: Dockerfile  main.py  pyproject.toml
apps/Auth/alembic/: env.py
apps/Auth/core/: __init__.py  config.py  database.py  exceptions.py  security.py
apps/Auth/dependencies/: authDependencies.py
apps/Auth/models/: userDB.py  userTokenDB.py
apps/Auth/repositories/: authRepository.py  baseRepository.py  userRepository.py
apps/Auth/schemes/: authScheme.py  userScheme.py
apps/Auth/services/: authService.py  baseService.py  userService.py
apps/Category/: alembic.ini  main.py  pyproject.toml
apps/Category/alembic/: env.py
apps/Category/alembic/versions/: d4e10e53eb13_created_news_category_table.py
apps/Category/alemic/versions/: 9dca031430c9_created_tables.py
apps/Category/api/v1/: routers.py
apps/Category/api/v1/endpoints/: news.py  product.py
apps/Category/core/: __init__.py  config.py  database.py  exceptions.py
apps/Category/models/: __init__.py  newsDB.py  productDB.py
apps/Category/repositories/: baseRepository.py  newsRepository.py  productRepository.py
apps/Category/schemes/: newsScheme.py  productScheme.py
apps/Category/services/: baseService.py  newsService.py  productService.py
apps/Product/: main.py  pyproject.toml
apps/Product/alembic/: env.py
apps/Product/core/: __init__.py  config.py  database.py  exception.py
apps/Product/models/: productDB.py
apps/Product/repository/: baseRepository.py  productRepository.py
apps/Product/schemes/: productScheme.py
(+24 files in other folders)
