[tool.poetry]
name = "digitalstore"
version = "0.1.0"
description = ""
authors = ["whiteRR <whiterr2134@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
SQLAlchemy = "^2.0.28"
alembic = "^1.13.1"
black = "^24.3.0"
pydantic = "^2.6.4"
asyncpg = "^0.29.0"
bcrypt = "^4.1.2"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
