[tool.poetry]
name = "category"
version = "0.1.0"
description = ""
authors = ["whiteRR <whiterr2134@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
pydantic = "^2.7.0"
SQLAlchemy = "^2.0.29"
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
